# Crazy-Omok-Game

./: .env.example  .gitignore  README.md
.github/workflows/: deploy.yml
deploy/: SETUP.md  omok.service
server/: Cargo.toml
server/src/: chess.rs  flick.rs  game.rs  main.rs  protocol.rs  state.rs  ws.rs  yacht.rs  yut.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/models/: KENNEY-LICENSE.txt
web/src/: App.tsx  config.ts  main.tsx  styles.css  types.ts
web/src/bot/: GamePanels.tsx  SoundToggle.tsx  aiWorker.ts  sound.ts  useViewport.ts
web/src/components/: Board.tsx  Chat.tsx  Countdown.tsx  InviteLink.tsx  PlayerList.tsx  SettingsEditor.tsx  TeamAssign.tsx
web/src/net/: aiWasm.ts  flickWasm.ts
web/src/state/: store.tsx
web/src/util/: clipboard.ts
web/src/views/: BotCheckers.tsx  BotChess.tsx  BotOmok.tsx  BotSetup.tsx  BotYacht.tsx  BotYut.tsx  ChessGame.tsx  CreateRoom.tsx  FindRooms.tsx  FlickGame.tsx  Game.tsx  Home.tsx  JoinByCode.tsx  JoinLink.tsx  Lobby.tsx  YachtGame.tsx  YutGame.tsx
web/src/wasm/: flick_wasm.d.ts  flick_wasm.js  flick_wasm_bg.wasm  flick_wasm_bg.wasm.d.ts  package.json
web/src/wasm-ai/: ai_wasm.d.ts  ai_wasm.js  ai_wasm_bg.wasm  ai_wasm_bg.wasm.d.ts  package.json
web/src/yacht/: YachtGuide.tsx  bot.ts  engine.ts
web/src/yut/: PowerThrowButton.tsx  board.ts  bot.ts  engine.ts  types.ts  zodiac.ts
web/wasm-ai/: Cargo.toml
web/wasm-ai/src/: checkers.rs  chess.rs  clock.rs  lib.rs  omok.rs
web/wasm-flick/: Cargo.toml
web/wasm-flick/src/: lib.rs
(+2 files in other folders)
